changelog for ephFrame
----------------------

2008-10-26


2008-10-24
+ form adds default action now, WEBROOT+current url
+ form fields now save their validate status (error message in formfield->error)
+ added form field password 
+ html helper now can create simple P-Elements
+ new sequence of component, model init, controller sends startup to components now after model init and after all components are attached to controller
+ validator can now replace some wilcard names (%name%) in the error messages
+ set now supports isEmpty for checking if a index is empty or the hole set is "empty"
+ missing view now renders the hole path to the missing view file
+ introducing appForm standrad form class for applications
+ javascript addFile now acts like addFiles with multiple arguments

2008-10-23
+ controller send now content type from view class
+ added xml view class
+ added simple rss action for controller
+ Validator fixed access to $validatorObject callback
+ db-query values now not escaped (should be done by model now)
+ added readme.txt dummy file
+ added absolute url to registry

2008-10-21
+ started rewrite of Form and FormField classes (new validator class)
+ model uses the new validator class now
+ added structure.sql file to /app/config/ to store table structures
+ changed url parameter to __url in /webroot/.htaccess
+ changed HTTPRequest to handle POST / GET Vars depending on the Request-Method
+ fixed bug in model cache loading

2008-10-20
+ added validation array that validates model data before saving
+ added third parameter for save to save only specific fields of the model
+ fixed/enhanced creation of resulting model set lists and single returns when
  retreiving model data
+ added ModelBehavior to models that can act like plugins in model logic
  supporting callbacks for beforeSave, afterSave ...